Tiny calc fixes. Restoring saved calculation added

--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_one.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_one.html.twig
@@ -139,7 +139,7 @@ $(function() {
                             		<div class="scrollbar"><div class="track"><div class="thumb"><div class="end"></div></div></div></div>
                             		<div class="viewport">
                             			 <div class="overview">
-                            				<ul form-input-id="carBrand" id="brandList">
+                            				<ul form-input-id="carBrand" id="brandList" class="combo_list">
                                             {%- if (brands) -%}
                                                 {%- for brand in brands -%}
                                                 {%- if (loop.index0 % 24 == 0) -%}
@@ -582,7 +582,7 @@ $(function() {
             dataType: 'JSON',
             data: { carAge: $('#carAge').val(), insuranceTerm: $('#insuranceTerm').val() }
             }).done(function (data) {
-                window.discountSum = ((1 - data.discount)*commonPrice).toFixed(2);
+                window.discountSum = ((1 - data.discount)*commonPrice);
                 var pD = 0;
                 var pN = 0;
                 if (window.priceDgo) pD = window.priceDgo;
@@ -592,6 +592,7 @@ $(function() {
                     $('.calc .discount').removeClass('hidden');
                     $('.calc .discount').show();
                     $('.itog').text(String((commonPrice - discountSum + pD + pN).toFixed(2)).replace('.', ',') + ' грн.');
+                    $('.discount span').text('-' + Math.round((1 - data.discount)*100) + '%');
                 } else {
                     $('.itog').text(String((commonPrice - discountSum + pD + pN).toFixed(2)).replace('.', ',') + ' грн.');
                     $('.calc .discount').addClass('hidden');
@@ -781,7 +782,7 @@ $(function() {
         //FIRST OF ALL CHECK HASH AND if #clear exists clear all calculations
         if(window.location.hash == '#clear') clearForm();
     //handle checkboxes events to add/remove additional insurance
-    $('#respons').on('click', function(e){
+    $('#respons').on('click', function(e){alert('a');
         if ($(this).is(':checked')) {
             $(this).parents('.responsibility').find('.disabled_shadow').removeClass('show');
             $('.your_auto').find('.box_line').removeClass('focus');
@@ -793,7 +794,7 @@ $(function() {
         }
     });
     $('#respons').next('label').on('click', function (e) {
-        if ($(this).parent().find('#respons').is(':checked')) window.calcDGO = false
+        if ($(this).parent().find('#respons').is(':checked')) window.calcDGO = false;
     });
     $('#passenger').on('click', function(e){
         if ($(this).is(':checked')) {
@@ -808,7 +809,7 @@ $(function() {
         }
     });
     $('#passenger').next('label').on('click', function (e) {
-        if ($(this).parent().find('#passenger').is(':checked')) window.calcNS = false
+        if ($(this).parent().find('#passenger').is(':checked')) window.calcNS = false;
     })
     $(":input").attr('autocomplete', 'off');
     //Accident checkbox handling
@@ -818,6 +819,7 @@ $(function() {
             $('.your_auto').find('.box_line').removeClass('focus');
             $(this).parents('.recomend_box').find('.box_line').removeClass('focus');
             $(this).parents('.box_line').addClass('focus');
+            window.calcDGO = true;
         }
         else {
             removeDGO();
@@ -829,6 +831,7 @@ $(function() {
             $('.your_auto').find('.box_line').removeClass('focus');
             $(this).parents('.recomend_box').find('.box_line').removeClass('focus');
             $(this).parents('.box_line').addClass('focus');
+            window.calcNS = true;
         }
         else {
             removeNS();
