--- a/path/src/Insurance/ContentBundle/Resources/views/Notifications/delayedOrderNotification.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Notifications/delayedOrderNotification.html.twig
@@ -1,4 +1,4 @@
-Уважаемый, {{order.firstname}}! 
+Уважаемый, {{order.firstname}}!
 
 Прежде всего позвольте выразить Вам свою благодарность за оказанное доверие нашему сервису.
 
@@ -11,16 +11,14 @@
 <b>Детальная информация по заказу:</b>
 
 Полис Автогражданки (ОСАГО) - {{order.price}} грн
-Разширение ответственности (ДГО) - {{order.priceDgo}} грн ( +50000 грн )
-Здоровье водителя и пассажиров (НС) - 75,00 грн ( 3 пассажира )
+{% if order.priceDgo %}Разширение ответственности (ДГО) - {{order.priceDgo}} грн ( +{{order.sumDgo}} грн ){% endif %}
+{% if order.priceNs %} Здоровье водителя и пассажиров (НС) - {{order.priceNs}} грн {% if order.passengerCount > 0 %}( {{order.passengerCount}} пассажира ){% endif %}{% endif %}
 
 <b>Общая сумма заказа:</b> {{order.price + order.priceDgo + order.priceNs}} грн
 
 Наш партнер, обеспечивающий страховые обязательства: ЧАО «СК «БРОКБИЗНЕС».
 
-------------------------------------------------------
-<b>Выбранный Вами способ оплаты:</b> Пластиковая карта VISA, MASTERCARD
-------------------------------------------------------
+Чтобы завершить оформление заказа, перейдите пожалуйста, по ссылке: http://{{siteDomain}}/{{path('step3')}}?hash={{order.hash}}
 
 Наш менеджер свяжется с Вами в ближайшее время для уточнения деталей доставки.
 
