--- a/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
@@ -160,19 +160,19 @@
                 <a href=""><span></span>Все о страховании ОСАГО</a>
             </div>
             <div class="column third">
-                <div class="title">Будьте с нами</div>
-                <form class="subscribe_form">
-                    <label>Подпишитесь на нашу рассылку</label>
-                    <input type="text" placeholder="Введите Ваш e-mail:" />
-                    <input type="submit" value="Подписаться" />
-                </form>
+                <div class="title">Мы на связи</div>
+				<div class="third_down">
+                <div class="email"><strong>Напишите нам:</strong> sale@polismarket.com.ua</div>
+				<div class="tel"><strong>Позвоните нам:</strong> (050) 345-24-15</div>
                 <div class="social_buttons">
+				    <a href="" class="tw"></a>
+				    <a href="" class="fb"></a>
                     <a href="" class="vk"></a>
-                    <a href="" class="fb"></a>
-                    <a href="" class="tw"></a>
+					</div>
                     <div style="clear: both;"></div>
+					</div>
                 </div>
-            </div>
+            
             <div style="clear: both;"></div>
          </div>
          <div class="bottom_part">
